doc/istio/traffic-shifting-template.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ${SERVICE_NAME}-traffic-shifting
  namespace: ${NAMESPACE}
spec:
  hosts:
  - ${SERVICE_NAME}
  http:
  - route:
    - destination:
        host: ${SERVICE_NAME}
        subset: v1
      weight: 80
    - destination:
        host: ${SERVICE_NAME}
        subset: v2
      weight: 20
